kcm_regionandlang: always set LC_* when changing language

BUG: 491305

If the LC_* is not set with Plasma (~/.config/plasma-localerc),
they inherit system-wide setting. However, we don't take system-wide setting
into account when displaying LC_* vars. As the result, the UI may display
incorrect results. Always set LC_* when changing language to avoid this issue.