kcms/region_language/regionandlangsettings.h
@@ -18,4 +18,27 @@ public:
     bool isDefaultSetting(KCM_RegionAndLang::SettingType setting) const;
     QString langWithFallback() const;
     QString LC_LocaleWithLang(KCM_RegionAndLang::SettingType setting) const;
+
+    /* If the LC_* is not set with Plasma (~/.config/plasma-localerc),
+     * but inherited from system-wide setting. Explicitly override LC_*
+     * system-wide setting when user is setting $LANG.
+     * For example:
+     * # /etc/locale.conf
+     * LANG=pt_PT.UTF-8
+     * LC_TIME=pt_PT.UTF-8
+     *
+     * # ~/.config/plasma-localerc
+     * [Formats]
+     * LANG=en_US.UTF-8
+     *
+     * The end result is LANG=en_US.UTF-8, LC_TIME=pt_PT.UTF-8
+     * But we will display LC_TIME as "en_US.UTF-8 inherit from LANG",
+     * because it is NOT SET BY US.
+     *
+     * Explicit set LC_TIME in ~/.config/plasma-localerc in this case
+     * should fix the issue.
+     *
+     * see https://bugs.kde.org/show_bug.cgi?id=491305
+     */
+    void setLC_Vars(const QString &LANG);
 };
